fix(telecom.sms): add column channel on datagrid
ref: MANAGER-10722

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/sms/src/sms.html
+++ b/packages/manager/modules/sms/src/sms.html
@@ -42,6 +42,16 @@
         >
         </oui-datagrid-column>
         <oui-datagrid-column
+            data-title=":: 'sms_channel_label' | translate"
+            data-property="channel"
+            data-type="options"
+            data-type-options="$ctrl.filtersOptions.channel"
+            data-filterable
+            data-sortable
+        >
+            <span data-translate="sms_channel_{{ $value }}"></span>
+        </oui-datagrid-column>
+        <oui-datagrid-column
             data-title=":: 'sms_status_label' | translate"
             data-property="status"
             data-sortable
