fix(telecom.sms): change error display on transfer credit
ref: MANAGER-10721

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/sms/src/sms/dashboard/creditTransfer/creditTransfer.html
+++ b/packages/manager/modules/sms/src/sms/dashboard/creditTransfer/creditTransfer.html
@@ -20,9 +20,7 @@
                 data-on-change="$ctrl.onSourceAccountChange(modelValue)"
                 required
             >
-                <span
-                    data-ng-bind="$item.description ? $item.name + ' (' + $item.description + ')' : $item.name"
-                ></span>
+                <span data-ng-bind="$item.displayName"></span>
             </oui-select>
         </oui-field>
 
@@ -36,9 +34,7 @@
                 name="destinationAccountSelect"
                 required
             >
-                <span
-                    data-ng-bind="$item.description ? $item.name + ' (' + $item.description + ')' : $item.name"
-                ></span>
+                <span data-ng-bind="$item.displayName"></span>
             </oui-select>
         </oui-field>
 
