--- a/packages/manager/modules/pci/src/projects/project/private-networks/add/add.html
+++ b/packages/manager/modules/pci/src/projects/project/private-networks/add/add.html
@@ -70,8 +70,8 @@
                     <p
                         class="mb-0"
                         data-translate="pci_projects_project_network_private_create_public_gateway_decription_1"
-                        data-translate-values="{ 
-                            guideLink: $ctrl.GUIDE_LINKS.PRIVATE_NETWORK_WITH_GATEWAY,
+                        data-translate-values="{
+                            guideLink: $ctrl.privateNetworkUrl,
                             trackLabel: $ctrl.TRACKING_PREFIX + '::guide-create-private-network-with-gateway'
                         }"
                         data-translate-compile
@@ -82,7 +82,7 @@
                     <p
                         data-translate="pci_projects_project_network_private_create_public_gateway_footer"
                         data-translate-values="{
-                            guideLink: $ctrl.GUIDE_LINKS.REGION_AVAILABILITY,
+                            guideLink: $ctrl.regionsGuideUrl,
                             trackLabel: $ctrl.TRACKING_PREFIX + '::regions-availability'
                         }"
                         data-translate-compile
