fix(storage.cold-archive): fix issue with users creationDate filter
ref: MANAGER-10731
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/users.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/users.html
@@ -36,7 +36,7 @@
     <oui-datagrid-column
         data-title="'pci_projects_project_storages_containers_users_creation_date' | translate"
         data-property="creationDate"
-        data-type="date"
+        data-type="string"
         data-searchable
         data-sortable
         data-filterable
