feat(storage.cold-archive): pr fixes
ref: MANAGER-9194
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

feat(storage.cold-archive): pr fixes

ref: MANAGER-9194
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

feat(storage.cold-archive): pr fixes

ref: MANAGER-9194
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

feat(storage.cold-archive): pr fixes

ref: MANAGER-9194
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

feat(storage.cold-archive): pr fixes

ref: MANAGER-9194
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

feat(storage.cold-archive): pr fixes

ref: MANAGER-9194
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

feat(storage.cold-archive): pr fixes

ref: MANAGER-9194
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

feat(storage.cold-archive): pr fixes

ref: MANAGER-9194
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
@@ -131,10 +131,7 @@
             </button>
             <button
                 class="oui-button oui-button_primary ml-sm-2"
-                data-ng-click="$ctrl.goToManageContainer()"
-                data-track-on="click"
-                data-track-name="PCI_PROJECTS_CONTAINERS_MANAGE"
-                data-track-type="navigation"
+                data-ng-click="$ctrl.onClickOnManageContainer()"
                 type="button"
             >
                 <span
