--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-node/upgrade-node.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-node/upgrade-node.html
@@ -17,13 +17,14 @@
         currentNodeModel: $ctrl.currentFlavor.name
     }"
 ></p>
-<database-flavors-list
+<pci-projects-project-database-flavors-list
     data-current-flavor="$ctrl.currentFlavor"
     data-on-change="$ctrl.onFlavorSelect(selectedFlavor)"
     data-flavors="$ctrl.flavors"
     data-selected-flavor="$ctrl.selectedFlavor"
     data-user="$ctrl.user"
-></database-flavors-list>
+></pci-projects-project-database-flavors-list>
+
 <div data-ng-if="$ctrl.upgradingFlavor">
     <oui-spinner data-size="s"></oui-spinner>
     <span
@@ -31,6 +32,7 @@
     ></span>
 </div>
 <oui-form-actions
+    class="mb-4"
     data-ng-if="!$ctrl.upgradingFlavor"
     data-submit-text="{{:: 'pci_databases_general_information_upgrade_node_confirm' | translate }}"
     data-cancel-text="{{:: 'pci_databases_general_information_upgrade_node_cancel' | translate }}"
