--- a/packages/manager/modules/pci/src/projects/project/project.html
+++ b/packages/manager/modules/pci/src/projects/project/project.html
@@ -1,28 +1,6 @@
 <div class="pci-project container-fluid h-100">
     <div class="row h-100">
-        <cloud-sidebar
-            class="h-100 p-0 col-lg-2 d-lg-flex flex-column"
-            data-ng-class="{
-                'cloud-sidebar_hidden': !$ctrl.isSidebarOpen,
-                'cloud-sidebar_open': $ctrl.isSidebarOpen
-            }"
-            data-is-trusted-zone="$ctrl.isTrustedZone"
-            data-is-open="$ctrl.isSidebarOpen"
-            data-on-click="$ctrl.closeSidebar()"
-            data-on-create-project-click="$ctrl.onCreateProjectClick"
-            data-go-to-project="$ctrl.goToProject"
-            data-go-to-projects="$ctrl.goToProjects"
-            data-go-to-project-inactive="$ctrl.goToProjectInactive"
-            data-ng-if="!$ctrl.isMenuSidebarVisible"
-        >
-        </cloud-sidebar>
-        <div
-            class="h-100 position-relative p-0 d-flex flex-column"
-            data-ng-class="{
-                'col-lg-10': !$ctrl.isMenuSidebarVisible,
-                'col-lg-12': $ctrl.isMenuSidebarVisible,
-             }"
-        >
+        <div class="h-100 position-relative p-0 d-flex flex-column col-lg-12">
             <ovh-manager-banner-text></ovh-manager-banner-text>
             <div
                 class="pci-project-content w-100 h-100 pt-4 px-3 px-md-5"
