--- a/packages/manager/modules/pci/src/projects/project/storages/containers/container/addUser/addUser.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/container/addUser/addUser.html
@@ -47,48 +47,58 @@
                 <oui-radio
                     ng-repeat="role in $ctrl.OBJECT_CONTAINER_USER_ROLES track by $index"
                     value="role"
-                    ><span
-                        data-ng-bind="
+                ><span
+                    data-ng-bind="
                         'pci_projects_project_storages_containers_container_addUser_right_'
                         + role | translate"
-                    ></span
+                ></span
                 ></oui-radio>
             </oui-radio-group>
         </div>
     </div>
-    <div class="oui-modal__footer">
-        <oui-button
-            data-variant="secondary"
-            data-ng-if="$ctrl.addUserStep === 1"
-            data-size="l"
-            data-on-click="$ctrl.stepBack()"
-        >
-            <span
-                data-translate="pci_projects_project_storages_containers_container_addUser_back_label"
-            ></span>
-        </oui-button>
-        <oui-button
-            data-variant="secondary"
-            data-size="l"
-            class="ml-2"
-            data-on-click="$ctrl.cancel()"
-        >
-            <span
-                data-translate="pci_projects_project_storages_containers_container_addUser_cancel_label"
-            ></span>
-        </oui-button>
-        <oui-button
-            data-variant="primary"
-            class="ml-2"
-            data-type="submit"
-            data-size="l"
-            data-on-click="$ctrl.addUserStorage()"
-            data-disabled="!$ctrl.isFormValid()"
-            ><span
-                data-translate="{{
+    <div class="oui-modal__footer p-2">
+
+        <div class="w-100 row m-2 justify-content-end">
+
+            <oui-button
+                data-variant="primary"
+                class="mx-auto order-1 order-sm-3 mx-sm-1"
+                data-type="submit"
+                data-size="l"
+                data-on-click="$ctrl.addUserStorage()"
+                data-disabled="!$ctrl.isFormValid()"
+            >
+                <span
+                    data-translate="{{
                     'pci_projects_project_storages_containers_container_addUser_' + ($ctrl.addUserStep === 0 ? 'next' : 'submit') + '_label'
                 }}"
-            ></span>
-        </oui-button>
+                ></span>
+            </oui-button>
+            <div class="w-100 d-sm-none order-2 m-1"></div>
+            <oui-button
+                data-variant="secondary"
+                class="mx-auto order-3 order-sm-2 mx-sm-1"
+                data-size="l"
+                data-on-click="$ctrl.cancel()"
+            >
+                <span
+                    data-translate="pci_projects_project_storages_containers_container_addUser_cancel_label"
+                ></span>
+            </oui-button>
+            <div class="w-100 d-sm-none order-4 m-1"></div>
+            <oui-button
+                data-variant="secondary"
+                class="mx-auto order-5 order-sm-1 mx-sm-1"
+                data-ng-if="$ctrl.addUserStep === 1"
+                data-size="l"
+                data-on-click="$ctrl.stepBack()"
+            >
+                <span
+                    data-translate="pci_projects_project_storages_containers_container_addUser_back_label"
+                ></span>
+            </oui-button>
+
+        </div>
+
     </div>
 </oui-modal>
