--- a/packages/manager/modules/sms/src/sms.html
+++ b/packages/manager/modules/sms/src/sms.html
@@ -1,4 +1,14 @@
-<oui-header data-heading="{{ :: 'sms_title' | translate }}"></oui-header>
+<oui-header data-heading="{{ :: 'sms_title' | translate }}">
+    <oui-guide-menu data-text="{{ 'sms_header_guide' | translate }}">
+        <oui-guide-menu-item
+            data-ng-repeat="guideLink in $ctrl.headerGuideLink track by $index"
+            data-href="{{:: guideLink.url }}"
+            data-external
+        >
+            <span data-ng-bind=":: guideLink.label"></span>
+        </oui-guide-menu-item>
+    </oui-guide-menu>
+</oui-header>
 
 <div class="container-fluid my-5">
     <oui-datagrid
