--- a/packages/manager/modules/pci/src/projects/project/storages/containers/container/container.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/container/container.html
@@ -88,7 +88,7 @@
                 <oui-field
                     data-ng-if="!$ctrl.archive"
                     data-label="{{:: 'pci_projects_project_storages_containers_container_info_publicUrl' | translate }}"
-                    data-label-popover="{{:: 'pci_projects_project_storages_containers_container_info_publicUrl_help' | translate }}"
+                    data-help-text="{{:: 'pci_projects_project_storages_containers_container_info_publicUrl_help' | translate}}"
                 >
                     <oui-clipboard
                         data-name="containerPublicUrl"
@@ -100,7 +100,7 @@
                 <oui-field
                     data-ng-if="!$ctrl.archive"
                     data-label="{{:: $ctrl.container.s3StorageType ? $ctrl.objectS3staticUrlInfo : ('pci_projects_project_storages_containers_container_object_info_staticUrl' | translate) }}"
-                    data-label-popover="{{:: 'pci_projects_project_storages_containers_container_object_info_' + ($ctrl.container.s3StorageType ? 's3_staticUrl_help' : 'staticUrl_help') | translate }}"
+                    data-help-text="{{:: 'pci_projects_project_storages_containers_container_object_info_' + ($ctrl.container.s3StorageType ? 's3_staticUrl_help' : 'staticUrl_help') | translate }}"
                 >
                     <oui-clipboard
                         data-name="containerStaticUrl"
