--- a/packages/manager/modules/pci/src/projects/project/additional-ips/floating-ips/edit/edit.html
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/floating-ips/edit/edit.html
@@ -28,6 +28,7 @@
         </oui-select>
     </oui-field>
     <oui-field
+        data-ng-if="$ctrl.privateNetwork"
         data-label="{{:: 'pci_additional_ips_floatingips_edit_select_ip' | translate }}"
     >
         <oui-select
