feat(modules.pci): have a consistant margin on top and bottom
ref: DTRSD-104831

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/private-networks/legacy/add/add.html
+++ b/packages/manager/modules/pci/src/projects/project/private-networks/legacy/add/add.html
@@ -126,7 +126,7 @@
         >
             <div class="row">
                 <div
-                    class="oui-select-picker col-sm-6 col-md-4 mb-2"
+                    class="oui-select-picker col-sm-6 col-md-4 m-2"
                     data-ng-repeat="subnet in $ctrl.subnets | orderBy : 'region' track by subnet.region"
                     data-ng-class="{ 'oui-select-picker_light' : !subnet.selected }"
                 >
