fix(telecom.sms): fix some tracking
ref: MANAGER-10306

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/sms/src/sms/dashboard/telecom-sms-dashboard.html
+++ b/packages/manager/modules/sms/src/sms/dashboard/telecom-sms-dashboard.html
@@ -107,7 +107,7 @@
                                         class="oui-link align-middle"
                                         href="{{:: $ctrl.getReloadCreditLink() }}"
                                         data-track-on="click"
-                                        data-track-name="{{:: $ctrl.constructor.getTrackName() }}"
+                                        data-track-name="{{:: $ctrl.getTrackName() }}"
                                         data-track-type="action"
                                     >
                                         <span
