fix(dedicated.cdn): change the wrong value backend use
ref:DTRSD-100192

Signed-off-by: stif59100 <steeve.vanderstocken@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/cdn/dedicated/manage/statistics/cdn-dedicated-manage-statistics.html
+++ b/packages/manager/apps/dedicated/client/app/cdn/dedicated/manage/statistics/cdn-dedicated-manage-statistics.html
@@ -232,7 +232,7 @@
                         <dd class="oui-tile__description">
                             <span
                                 data-translate="cdn_configuration_backend"
-                                data-translate-values="{ t0: $ctrl.cdn.backends }"
+                                data-translate-values="{ t0: $ctrl.cdn.backendUse }"
                             ></span>
                         </dd>
                     </dl>
